<resources>
    <string name="app_name">GPRSTrack</string>
    <string name="mapkey">AIzaSyBlaxIl2Zh4hsUEJYhWABY8VE0mZXr6Ats</string>
    <string name="ip">[IP]</string>
    <string name="support_email">[EMAIL]</string>
    <string name="https_on">[HTTPS]</string>
    <string name="mapbox_access_token">AIzaSyBlaxIl2Zh4hsUEJYhWABY8VE0mZXr6Ats</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="wrongLogin">Veuillez verifier Email et Mot de passe svp!</string>
    <string name="logout">Déconnexion</string>
    <string name="welcome">Welcome</string>
    <string name="dashboardHint"><![CDATA[Use the dashboard to quickly access the most important data & settings]]></string>
    <string name="map">Map</string>
    <string name="objects">Balises</string>
    <string name="events">Evennements</string>
    <string name="history">Historique</string>
    <string name="tools">Outils</string>
    <string name="setup">Configuration</string>
    <string name="signIn">CONNEXION</string>
    <string name="register">Code Perdu</string>
    <string name="addNewDevice">Add new device</string>
    <string name="errorHappened">Erreur du Reseau</string>
    <string name="altitude">Altitude</string>
    <string name="protocol">Protocol</string>
    <string name="driver">Chauffeur</string>
    <string name="position">Position</string>
    <string name="main">Paramètres Généraux</string>
    <string name="icon">Icon</string>
    <string name="advanced">Advanced</string>
    <string name="sensors">Sensors</string>
    <string name="addSensor">Add sensor</string>
    <string name="saveChanges">Enregistrer Modifications</string>
    <string name="name">Nom</string>
    <string name="imei">IMEI</string>
    <string name="clearData">Effacer données</string>
    <string name="myAccount">Mon Compte</string>
    <string name="support">Support</string>
    <string name="general">Général</string>
    <string name="driverInformation">information du chauffeur</string>
    <string name="location">Emplacement</string>
    <string name="object">Object</string>
    <string name="model">Model</string>
    <string name="plate">Plaque</string>
    <string name="odometer">Odomètre</string>
    <string name="gpsDevice">Appareil GPRS</string>
    <string name="rfid">RFID</string>
    <string name="phone">Téléphone</string>
    <string name="email">E-mail</string>
    <string name="description">Description</string>
    <string name="address">Adresse</string>
    <string name="writeYourMessage">Write your message</string>
    <string name="send">Envoyer</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_my_account">MyAccountActivity</string>
    <string name="needHelp">Besoin d\'Aide?</string>
    <string name="belowNeedHelp">Notre vaste réseau d\'agents et notre équipe d\'assistance sont prêtes à vous aider!</string>
    <string name="getSupport">Contacter Assistance</string>
    <string name="membership">Type d\'utilisateur</string>
    <string name="changePassword">Change password</string>
    <string name="changeMembership">Change membership</string>
    <string name="devicesLimit">Devices limit</string>
    <string name="expirationDate">Expiration date</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="change">Changer</string>
    <string name="reports">Rapports</string>
    <string name="createNewReport">Créer un rapport</string>
    <string name="newReport">Nouveau rapport</string>
    <string name="saveReport">Enregistrer rapport</string>
    <string name="format">Format</string>
    <string name="devices">Devices</string>
    <string name="geofences">Geofences</string>
    <string name="schedule">Schedule</string>
    <string name="no">Non</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="alerts">Alerts</string>
    <string name="geofencing">Geofencing</string>
    <string name="ruler">Ruler</string>
    <string name="poi">POI</string>
    <string name="showPoint">Voir Coordonnées</string>
    <string name="editReport">Editer rapport</string>
    <string name="report">Rapport</string>
    <string name="timePeriod">Time period</string>
    <string name="filter">Filtre</string>
    <string name="from">DE</string>
    <string name="to">A</string>
    <string name="title">Titre</string>
    <string name="type">Type</string>
    <string name="stops">Arrêts</string>
    <string name="done">Fait</string>
    <string name="selectDevices">Selectionner balises</string>
    <string name="sendEmail">Envoyer un E-mail avec…</string>
    <string name="simNo">SIM no.</string>
    <string name="group">Groupe</string>
    <string name="measurement">Measurement</string>
    <string name="kmPerLiter">Km par 1L</string>
    <string name="costForLiter">Prix d\'un 1L</string>
    <string name="saved">Saved!</string>
    <string name="timeAdjustment">Time adjustment:</string>
    <string name="inputCustom">Input custom:</string>
    <string name="custom">Custom</string>
    <string name="continuestr">Continuer</string>
    <string name="accuracy">Accuracy</string>
    <string name="tail">Tail</string>
    <string name="minMovingSpeedKmh">Vitesse mini en km/h</string>
    <string name="minFuelDifferenceFillings">Min. fuel difference to detect fuel fillings</string>
    <string name="minFuelDifferenceTheft">Min. fuel difference to detect fuel thefts</string>
    <string name="tailColor">Tail color</string>
    <string name="tailLength">Tail length (0–10 last points)</string>
    <string name="deviceModel">Device model</string>
    <string name="plateNumber">Plate number</string>
    <string name="vin">VIN</string>
    <string name="registrationAssetNumber">Registration/asset number</string>
    <string name="objectOwnerManager">Propriétaire Balise/Dirigeant</string>
    <string name="nameMustBeSet">Name must be set!</string>
    <string name="imeiMustBeSet">IMEI must be set!</string>
    <string name="clearAllEvents">Masquer tout</string>
    <string name="openBrowser">Open browser</string>
    <string name="objectGroups">Groupe de balises</string>
    <string name="drivers">Chauffeur</string>
    <string name="sms">SMS</string>
    <string name="units_of_distance">Unités de distance</string>
    <string name="units_of_capacity">Unités de capacité</string>
    <string name="units_of_altitude">Unités d\'altitude</string>
    <string name="timezone">Zone Horaire</string>
    <string name="add_new">Ajouter nouveau</string>
    <string name="device">Balise</string>
    <string name="sms_gateway">Protocole SMS</string>
    <string name="sms_templates">Modèles SMS</string>
    <string name="gprsTemplates">Modèles GPRS</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="yourPoint">votre point</string>
    <string name="addEvent">Ajouter evennementt</string>
    <string name="parameters">Parametres</string>
    <string name="showAlways">Toujours voir</string>
    <string name="enableSmsGateway">Enable SMS gateway</string>
    <string name="requestMethod">Request method</string>
    <string name="authentication">Authentication</string>
    <string name="smsGateway_sometext"><![CDATA[Variables: %NUMBER%, %MESSAGE%.\n\n
SMS gateway URL example: http://SMS_GATEWAY/sendsms.php?username=USER&password=PASSWORD&number=%NUMBER%&message=%MESSAGE%]]></string>
    <string name="smsGatewayUrl">SMS gateway url:</string>
    <string name="sendTestSms">Envoyer SMS test</string>
    <string name="addNewSmsTemplate">Ajouter Modèle SMS</string>
    <string name="message">Message</string>
    <string name="addNewGprsTemplate">Ajouter un Modèle GPRS</string>
    <string name="titleFieldRequired">Le title est obligatoire!</string>
    <string name="messageFieldRequired">le champ Message est requis!</string>
    <string name="sendCommand">Envoyer une commande</string>
    <string name="gprs">GPRS</string>
    <string name="smsTemplate">Modèle SMS</string>
    <string name="smsTemplateHint"><![CDATA[\"Modèle SMS\" peut etre ajouté à: Reglages->Modele SMS]]></string>
    <string name="search">Rechercher</string>
    <string name="statistics">Statistics</string>
    <string name="encoding">Encoding</string>
    <string name="clearQueue">Effacer la queue</string>
    <string name="smsGatewayAppInfo" formatted="false"><![CDATA[SMS in the queue: %d\nApp last connection: %s\nIf sms gateway app don\'t send sms in 24h it will be deleted from the queue.]]></string>
    <string name="username">Username</string>
    <string name="phoneNumber">Phone number</string>
    <string name="testSmsSent">Test sms sent!</string>
    <string name="addDriver">Ajouter Chauffeur</string>
    <string name="userDriverAdded">Chauffeur ajouté!</string>
    <string name="invalidEmail">Invalid email!</string>
    <string name="addCustomEvent">Add custom event</string>
    <string name="conditions">Conditions:</string>
    <string name="addCondition">Add condition</string>
    <string name="parameter">Parameter</string>
    <string name="value">Value</string>
    <string name="addMarker">Add marker</string>
    <string name="addPOIMarker">Add POI marker</string>
    <string name="setMarkerLocation">Set marker location</string>
    <string name="set_data">Configurer</string>
    <string name="poiMarkerAdded">Marker successfuly added!</string>
    <string name="locationRequired">Location is required!</string>
    <string name="rulerDistance">Distance: %.2fkm</string>
    <string name="clickOnMap">Cliquez sur la Carte!</string>
    <string name="gprsCommandSent">Commande PGRS envoyée!</string>
    <string name="smsCommandSent">SMS command sent!</string>
    <string name="addGeofence">Add geofence</string>
    <string name="drawPolygon">Draw polygon</string>
    <string name="bgcolor">Background color</string>
    <string name="cantClosePolygon">Too less points to close a polygon!</string>
    <string name="polygonIsntClosed">Polygon is not closed!</string>
    <string name="bgcolorMustBeSet">Background color must be set!</string>
    <string name="geofenceAdded">Geofence successfully added!</string>
    <string name="noPolygonData">Pas de données!</string>
    <string name="addAlert">Ajouter alert</string>
    <string name="saveAlert">Sauvegarder alert</string>
    <string name="overspeed">Vitesse hors limite</string>
    <string name="userInfo">Info d\'Utilisateur</string>
    <string name="separatePhoneBySemicolonHint">For multiple mobile phones separate them via semicolon ex.: +2410000000;+24100000</string>
    <string name="statisticsGraph">Statistics graph</string>
    <string name="session_active">Garder ma session ouverte</string>
    <string name="text_sous_bienvenu">Nous protegeons votre matériel en temps réel.</string>
    <string name="text_bienvenu">BIENVENU SUR GABON TEST</string>
    <string name="version_1_0_1">Version 1.0.1</string>
    <string name="code_perdu">CODE PERDU</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="entrer_email">Entrer Email</string>
    <string name="pr_ciser_email_ressent">Préciser Email ressent</string>
    <string name="en_demandant_la_r_initialisation_de_votre_mot_de_passe_vous_acceptez_nos_conditions_de_changements_de_mots_de_passe_votre_nouveau_mot_de_passe_vous_sera_remis_par_un_agent_uniquement_dans_nos_locaux">En demandant la réinitialisation de votre mot de passe, vous acceptez nos conditions de changements de mots de passe. Votre nouveau mot de passe vous sera remis par un agent,uniquement dans nos locaux</string>
    <string name="connexion">CONNEXION</string>
    <string name="non_data">Oops! pas d\'Internet</string>
    <string name="close">Fermer</string>
    <string name="lieux">lieux</string>
    <string name="donn_e_historiques">donnée historiques</string>
</resources>