<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:icon="@drawable/icon_historylog"
        android:id="@+id/logFragment"
        app:showAsAction="ifRoom"
        android:title="@string/donn_e_historiques"/>

    <item android:icon="@drawable/history_stat"
        android:id="@+id/stats"
        app:showAsAction="ifRoom"
        android:title="@string/statisticsGraph"/>

    <item android:icon="@drawable/history_map"
        android:id="@+id/historyMapFragment"
        app:showAsAction="ifRoom"
        android:title="@string/map"/>

    <item android:icon="@drawable/history_place"
        android:id="@+id/routeFragment"
        app:showAsAction="ifRoom"
        android:title="@string/lieux"/>
</menu>